--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -70,6 +70,7 @@ deadlines:
     deadline: 2012-12-16
   'X.org':
     days: sat
+    ann: 'http://lists.freedesktop.org/archives/wayland-devel/2012-September/005444.html'
   'Ada':
     days: sun
     ann: 2012-November/001647
