--- a/Rules
+++ b/Rules
@@ -396,10 +396,7 @@ route '/schedule/devrooms/*/' do;end
 
 route '/assets/style/sprite/' do
   suffix = if @site.config[:digest_assets]
-             require 'digest/sha2'
-             sha = Digest::SHA256.new
-             Dir.entries('content/sponsors').select{|f| f =~ %r{-(big|small)\.(png|jpg|jpeg|gif)$}}.each{|f| sha << IO.read(File.join('content/sponsors', f))}
-             "-" + sha.hexdigest.downcase
+             "-#{$sprite_digest}"
            else
              ""
            end
@@ -409,25 +406,26 @@ end
 
 # deploy content/assets/style/foo.css as output/assets/style/foo.css
 # (without this, nanoc would deploy it as output/assets/style/foo/index.html)
-route '/assets/style/*/' do
+route '/assets/style/fosdem/' do
+  fail "#{item.identifier} is not the css file!" unless item[:extension] == 'css'
   suffix = if @site.config[:digest_css]
              parts = @items.select{|i| i.identifier =~ %r{^/assets/style/parts/.+}}.sort_by(&:identifier)
              "-" + digest(parts)
            else
              ""
            end
-
   "#{$prefix}#{item.identifier.chop}#{suffix}.#{item[:extension]}"
 end
-# do the same with assets/img/*
-route '/assets/img/*/' do
-  suffix = if @site.config[:digest_assets]
-             parts = @items.select{|i| i.identifier =~ %r{^/assets/style/parts/.+}}.sort_by(&:identifier)
-             "-" + digest(parts)
-           else
-             ""
-           end
-  "#{$prefix}#{item.identifier.chop}#{suffix}.#{item[:extension]}"
+
+route '/assets/style/*/' do
+  unless $item_by_id.fetch('/assets/style/sprite/')[:sprites].values.include? item.identifier
+    suffix = if @site.config[:digest_assets]
+               "-#{digest item}"
+             else
+               ""
+             end
+    "#{$prefix}#{item.identifier.chop}#{suffix}.#{item[:extension]}"
+  end
 end
 
 # don't add a digest to the badge filenames: as they are linked to
