navigation: link the sightseeing page

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -33,6 +33,7 @@ footer:
     - /practical/catering
     - /practical/services
     - /practical/jobcorner
+    - /sightseeing
   - Media and Press:
     - /interviews
     - /support/promote
