sightseeing: move to /practical
We should do a bit more thinking about "namespaces" on the website in
general.  I don't feel we should try to pack everything in our top-level
namespace just because we can.  Happily, the "Aliases" keyword in nanoc
makes it easy to move pages around.

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -30,10 +30,10 @@ footer:
     - /practical/beerevent
     - /practical/transportation
     - /practical/accommodation
+    - /practical/sightseeing
     - /practical/catering
     - /practical/services
     - /practical/jobcorner
-    - /sightseeing
   - Media and Press:
     - /interviews
     - /support/promote
