--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -14,8 +14,12 @@ deadlines:
     deadline: 2012-12-25
     days: both
   'Free Java':
-    ann: 2012-November/001653
-    deadline: 2012-12-21
+    ann:
+      - 2012-November/001653
+      - 2012-December/001683
+    deadline:
+      - 2012-12-21
+      - 2013-01-04
     days: both
   'Legal Issues':
     ann: 2012-November/001652
