--- a/config.yaml
+++ b/config.yaml
@@ -174,9 +174,9 @@ keysigning:
   homework_due: 2013-06-09
   submission_start: 2012-12-08
   # Change this when the submission window opens/closes.
-  submission_closed: false
+  submission_closed: true
   # Change this when the list of keys is published.
-  list_published: false
+  list_published: true
   # Change this when the hashes of the keylist have been published.
   hashes_published: false
 
