config: add an archive deploy target
There may still be 'data' changes to the 2013 website (video links,
etc).  This target enables us to easily push those changes into the
archived website too.

When the 2013 edition becomes truly historical, we should remove
write permission for www-data and remove this target.

--- a/config.yaml
+++ b/config.yaml
@@ -136,6 +136,10 @@ watcher:
   notify_on_compilation_failure: true
 
 deploy:
+  archive:
+    kind: rsync
+    dst:  "www-data@apeiron.fosdem.org:/var/www/archive.fosdem.org"
+    options: [ '-glPrtvzPO', '--exclude=searcher', '--exclude=404.html', '--exclude=favicon.ico' ]
   public:
     kind: rsync
     dst:  "www-data@apeiron.fosdem.org:/var/www/fosdem.org/public/2013"
