devrooms-cfp: add a pointer to the LLVM announcement

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -33,6 +33,7 @@ days:
     'Internet of things':
     'JavaScript':
     'LLVM':
+        ann: http://llvm.org/devmtg/2014-02/
     'Microkernel and component-based operating systems':
     'NoSQL':
     'Python':
