--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -37,6 +37,7 @@ days:
     'Microkernel and component-based operating systems':
         ann: https://os.inf.tu-dresden.de/pipermail/l4-hackers/2013/006068.html
     'NoSQL':
+        ann: http://www.lczajkowski.com/2013/10/10/cfp-for-nosql-devroom-at-fosdem/
     'Python':
     'Software-defined radio':
         ann: http://gnuradio.org/redmine/projects/gnuradio/wiki/FOSDEM14
