devrooms-cfp: 'virtualisation' -> 'virtualisation and iaas'

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -6,7 +6,7 @@ days:
     'Embedded':
     'Graphics':
     'Legal issues':
-    'Virtualisation':
+    'Virtualisation and IaaS':
 
   saturday:
     'Ada':
