Add 'Virtualisation and IaaS' CFP/deadline
Add 'Virtualisation and IaaS' devroom CFP link and deadline.

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -7,6 +7,8 @@ days:
     'Graphics':
     'Legal issues':
     'Virtualisation and IaaS':
+        ann: https://groups.google.com/forum/#!topic/fosdem14-virt-and-iaas-devroom/04y5YkyqzIo
+        deadline: 2013-12-01
 
   saturday:
     'Ada':
