devrooms-cfp: embedded devroom announcement

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -4,6 +4,8 @@ days:
   both:
     'Distributions':
     'Embedded':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2013-October/001870.html
+        deadline: 2013-12-10
     'Graphics':
         ann: http://lists.x.org/archives/xorg-devel/2013-October/038185.html
     'Legal issues':
