--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -88,3 +88,5 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2013-October/001871.html
         deadline: 2013-12-08
     'Wine':
+        ann: http://www.winehq.org/pipermail/wineconf/2013-October/000841.html
+        deadline: 2013-12-01
