--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -38,6 +38,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2013-October/001865.html
         deadline: 2013-12-01
     'Mozilla':
+        ann: http://claristamozilla.wordpress.com/2013/11/14/fosdem-2014-call-for-proposals/
+        deadline: 2013-12-20
     'MySQL':
         ann: http://lists.mysql.com/community/407
         deadline: 2013-12-06
