--- a/config.yaml
+++ b/config.yaml
@@ -174,7 +174,7 @@ keysigning:
   homework_due: 2014-06-08
   submission_start: 2013-12-07
   # Change these when the submission window opens/closes.
-  submission_notyet: true
+  submission_notyet: false
   submission_closed: false
   # Change this when the list of keys is published.
   list_published: false
