--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -33,7 +33,7 @@ days:
     'Game development':
         ann: https://lists.fosdem.org/pipermail/open-source-gamedev-devroom/2013-October/000053.html
         deadline: 2013-12-01
-    'High-performance computing and computational science':
+    'HPC and computational science':
         ann: http://hpcugent.github.io/easybuild/fosdem14.html
         deadline: 2013-12-06
     'Java':
@@ -78,7 +78,7 @@ days:
         deadline: 2013-12-01
     'LLVM':
         ann: http://llvm.org/devmtg/2014-02/
-    'Microkernel and component-based operating systems':
+    'Microkernel-based operating systems':
         ann: https://os.inf.tu-dresden.de/pipermail/l4-hackers/2013/006068.html
         deadline: 2013-12-01
     'NoSQL':
