--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -29,5 +29,6 @@ footer:
     - /practical/accommodation
   - Media and Press:
     - /interviews
+    - /support/promote
     - Videos: 'http://video.fosdem.org/'
 
