navigation: restore beer links

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -25,6 +25,7 @@ footer:
     - /keysigning
   - Practical Information:
     - /stands
+    - /practical/beerevent
     - /practical/transportation
     - /practical/accommodation
   - Media and Press:
