navigation: link to /promote/donate

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -15,6 +15,7 @@ footer:
     - /news
     - About: /about
     - /about/sponsors
+    - /support/donate
     - Archives: /archives
   - Schedule:
     - Information: /schedule
