--- a/config.yaml
+++ b/config.yaml
@@ -170,16 +170,16 @@ pentabarf:
     height: 200
 
 keysigning:
-  submission_deadline: 2014-01-27
-  homework_due: 2014-06-08
-  submission_start: 2013-12-07
+  submission_deadline: 2015-01-26
+  homework_due: 2015-06-07
+  submission_start: 2014-12-06
   # Change these when the submission window opens/closes.
-  submission_notyet: false
-  submission_closed: true
+  submission_notyet: true
+  submission_closed: false
   # Change this when the list of keys is published.
-  list_published: true
+  list_published: false
   # Change this when the hashes of the keylist have been published.
-  hashes_published: true
+  hashes_published: false
 
 deadlines:
   lightningtalks:
