--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -15,7 +15,7 @@ days:
     'Infrastructure as a service':
     'Legal and policy issues':
     'Lisp':
-    'Multimedia':
+    'Open media standards and software':
     'Network management and SDN':
     'Open Document editors':
     'Open source search':
