--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -38,6 +38,8 @@ days:
     'Mozilla':
     'MySQL and friends':
     'Open source design':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002031.html
+        deadline: 2014-12-01
     'PHP and friends':
     'Security':
       ann: https://github.com/security-devroom/fosdem-2015/blob/master/README.md#security-devroom--fosdem15
