Adding CFP details for Open Source Design devroom
Linking to CFP in the FOSDEM mailing list archive and adding the
submission deadline.

Signed-off-by: Belen Barros Pena <belen.barros.pena@linux.intel.com>

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -38,6 +38,8 @@ days:
     'Mozilla':
     'MySQL and friends':
     'Open source design':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002031.html
+        deadline: 2014-12-01
     'PHP and friends':
     'Security':
     'Software-defined radio':
