CFP for Legal and Policy Issues DevRoom for 2015.
The CFP for the Legal and Policy Issues DevRoom is now available.  This
change adds 'ann:' and 'deadline:' properties for that CFP.

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -16,6 +16,8 @@ days:
     'Graph processing':
     'Infrastructure as a service':
     'Legal and policy issues':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002036.html
+        deadline: 2014-11-17
     'Lisp':
     'Open media':
     'Network management and SDN':
