devrooms: add network devroom cfp

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -33,6 +33,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002041.html
         deadline: 2014-12-01
     'Network management and SDN':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002060.html
+        deadline: 2014-11-25
     'Open Document editors':
     'Open source search':
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002040.html
